cmake_minimum_required(VERSION 3.26)
project(Cplusplus)

set(CMAKE_CXX_STANDARD 14)

add_executable(Cplusplus
        Chapter01/HelloWorlds.cpp)
add_executable(Chap01Compile Chapter01/test.cpp Chapter01/test.h
        Chapter01/HelloCompile.cpp)
add_executable(Chap02Prg2_1 Chapter02/prg02_01.cpp)
add_executable(Chap02Prg2_2 Chapter02/prg02_02.cpp)
add_executable(Chap02Prg2_3 Chapter02/prg02_03.cpp)
add_executable(Chap02Prg2_4 Chapter02/prg02_04.cpp)
add_executable(Chap02Prg2_5 Chapter02/prg02_05.cpp)
add_executable(Chap02Prg2_6 Chapter02/prg02_06.cpp)
add_executable(Chap02Prg2_7 Chapter02/prg02_07.cpp)
add_executable(Chap02Prg2_9 Chapter02/prg02_09.cpp)
add_executable(Chap02Prg2_11 Chapter02/prg02_11.cpp)
add_executable(Chap02Prg2_12 Chapter02/prg02_12.cpp)
add_executable(Chap02Prg2_13 Chapter02/prg02_13.cpp)
add_executable(Chap03Prg3_1 Chapter03/prg03_01.cpp)
add_executable(Chap03Prg3_2 Chapter03/prg03_02.cpp)
add_executable(Chap03Prg3_3 Chapter03/prg03_03.cpp)
add_executable(Chap03Prg3_4 Chapter03/prg03_04.cpp)
add_executable(Chap03Prg3_5 Chapter03/prg03_05.cpp)
add_executable(Chap03Prg3_6 Chapter03/prg03_06.cpp)
add_executable(Chap03Prg3_7 Chapter03/prg03_07.cpp)
add_executable(Chap03Prg3_8 Chapter03/prg03_08.cpp)
add_executable(Chap03Prg3_11 Chapter03/prg03_11.cpp)
add_executable(Chap03Prg3_17 Chapter03/prg03_17.cpp)
add_executable(Chap03Prg3_21 Chapter03/prg03_21.cpp)
add_executable(Chap03Prg3_22 Chapter03/prg03_22.cpp)
add_executable(Chap03Prg3_23 Chapter03/prg03_23.cpp)
add_executable(Chap03Prg3_24 Chapter03/prg03_24.cpp)
add_executable(Chap03Prg3_25 Chapter03/prg03_25.cpp)
add_executable(Chap03Prg3_26 Chapter03/prg03_26.cpp)
add_executable(Chap04Prg4_1 Chapter04/prg04_01.cpp)
add_executable(Chap04Prg4_2 Chapter04/prg04_02.cpp)
add_executable(Chap04Prg4_3 Chapter04/prg04_03.cpp)
add_executable(Chap04Prg4_4 Chapter04/prg04_04.cpp)
add_executable(Chap04Prg4_5 Chapter04/prg04_05.cpp)
add_executable(Chap04Prg4_6 Chapter04/prg04_06.cpp)
add_executable(Chap04Prg4_7 Chapter04/prg04_07.cpp)
add_executable(Chap04Prg4_8 Chapter04/prg04_08.cpp)
add_executable(Chap04Prg4_9 Chapter04/prg04_09.cpp)
add_executable(Chap04Prg4_10 Chapter04/prg04_10.cpp)
add_executable(Chap04Prg4_12 Chapter04/prg04_12.cpp)
add_executable(Chap04Prg4_14 Chapter04/prg04_14.cpp)
add_executable(Chap05Prg5_2 Chapter05/prg05_02.cpp)
add_executable(Chap05Prg5_4 Chapter05/prg05_04.cpp)
add_executable(Chap05Prg5_5 Chapter05/prg05_05.cpp)
add_executable(Chap05Prg5_6 Chapter05/prg05_06.cpp)
add_executable(Chap05Prg5_7 Chapter05/prg05_07.cpp)
add_executable(Chap05Prg5_8 Chapter05/prg05_08.cpp)
add_executable(Chap05Prg5_9 Chapter05/prg05_09.cpp)
add_executable(Chap05Prg5_10 Chapter05/prg05_10.cpp)
add_executable(Chap05Prg5_11 Chapter05/prg05_11.cpp)
add_executable(Chap05Prg5_12 Chapter05/prg05_12.cpp)
add_executable(Chap05Prg5_13 Chapter05/prg05_13.cpp)
add_executable(Chap05Prg5_14 Chapter05/prg05_14.cpp)
